# Distributed-System-Image-Sharing-Platform

./: .gitignore  CMakeLists.txt  Message.h  Peer.h  README.md  ServerDirectory  ServerDirectory.cpp  ServerDirectory.h  TestingQt.h  UDPSocketClient.h  UDPSocketServer.h  a.out  verify.txt
DOS/: (OLD)ServerDirectory.cpp  DoS.cpp  DoS.h  Message.h  ServerDirectory  ServerDirectory.h  a.out  users.txt  verify.txt
GUIFiles/: ImageSharer.pro  ImageSharer.pro.user.0ac1171  ImageSharer.pro.user.288fad3  ImageSharer.pro.user.a69a26b  ImageSharer.pro.user.d53f9bd  ImageSharer.pro.user.d9f1fc8  Peer.h  allusers.cpp  allusers.h  allusers.h.autosave  allusers.ui  allusers.ui.autosave  allusers_images.cpp  allusers_images.h  allusers_images.ui  editmyimages.cpp  editmyimages.h  editmyimages.ui  login.cpp  login.h  login.ui  loginwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  myimages.cpp  myimages.h  myimages.ui  notifications.cpp  notifications.h  notifications.ui  peer.h  profile.cpp  profile.h  profile.ui  sharedimages.cpp  sharedimages.h  sharedimages.ui  signup.cpp  signup.h  (+4 more)
build-ImageSharer-Desktop_Qt_5_11_3_GCC_64bit-Debug/: ImageSharer  Makefile  moc_allusers.cpp  moc_login.cpp  moc_mainwindow.cpp  moc_profile.cpp  moc_signup.cpp  moc_usersdialog.cpp  ui_allusers.h  ui_login.h  ui_mainwindow.h  ui_profile.h  ui_signup.h
